# sys-design

./: .gitignore  LICENSE  README.md  docker-compose.yml
be/app/uber/: README.md  docker-compose.yml  pyproject.toml
be/app/uber/src/: http_server.py  location.swagger.json  match.swagger.json  proto_compile.bat
be/app/uber/src/google.golang.org/genproto/googleapis/api/annotations/: annotations.pb.go  http.pb.go
be/app/uber/src/grpc-gw/: Dockerfile  gateway.go  go.mod  go.sum  location.swagger.json  match.swagger.json
be/app/uber/src/grpc-gw/api/location/: location.pb.go  location.pb.gw.go  location_grpc.pb.go
be/app/uber/src/grpc-gw/api/match/: match.pb.go  match.pb.gw.go  match_grpc.pb.go
be/app/uber/src/lb/: docker-compose.yml  nginx.conf
be/app/uber/src/proto/: location.proto  match.proto
be/app/uber/src/server/: location_app.py  location_pb2.py  location_pb2_grpc.py  match_app.py  match_pb2.py  match_pb2_grpc.py
be/app/uber/src/server/google/api/: http_pb2.py
be/app/uber/src/test/: map_fe.html  random_driver.py
be/app/uber/system_design/: README.md
cache/redis/: Dockerfile  redis.conf
db/mongodb/: mongo.py
distribution/kafka/: Dockerfile
fe/google-docs/: package.json
fe/host/: package-lock.json  package.json
fe/host/src/: App.tsx
fe/leetcode/: package-lock.json  package.json
fe/newsfeed/: package.json
fe/online-auction/: package-lock.json  package.json
fe/robinhood/: package.json
fe/ticket-master/: package-lock.json  package.json
fe/uber/: package-lock.json  package.json
fe/whatsapp/: package.json
fe/yelp/: package.json
(+18 files in other folders)
